--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           
           <div class="text-container">
             <p>
-              A passionate web designer who loves bringing ideas to life through captivating and user-friendly websites. I strive to create visually stunning and functional experiences. I specialize in crafting responsive designs that adapt seamlessly across different devices.
+             As a highly motivated Web Developer with a Bachelor's degree in Electronics and Telecommunication Engineering (E&TC), I possess a strong foundation in problem-solving and a passion for creating user-friendly and visually appealing web experiences. I have honed my skills in various web development technologies, including Python, HTML, CSS, JavaScript, and ReactJS.
             </p>
           </div>
         </div>
