--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           
           <div class="text-container">
             <p>
-             As a highly motivated Web Developer with a Bachelor's degree in Electronics and Telecommunication Engineering (E&TC), I possess a strong foundation in problem-solving and a passion for creating user-friendly and visually appealing web experiences. I have honed my skills in various web development technologies, including Python, HTML, CSS, JavaScript, and ReactJS.
+            I am an enthusiastic undergraduate student specializing in Electronics and Telecommunication Engineering at Smt. Kashibai Navale College of Engineering, affiliated with Savitribai Phule Pune University. With a strong foundation in Python and front-end engineering, I have honed my skills through various projects and internships. My hands-on experience includes a valuable internship as a Java developer, numerous web development projects, and intriguing ventures into data analysis. Passionate about leveraging technology to solve real-world problems, I am excited to bring my expertise and innovative mindset to new challenges and opportunities.
             </p>
           </div>
         </div>
