--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="btn-container">
           <button
           class="btn btn-color-2"
-         onclick="window.open('./Yash Baviskar CV.pdf')"
+         onclick="window.open('./Yash Resume.pdf')"
         >
           
         View CV
@@ -79,7 +79,7 @@
           
           <div class="text-container">
             <p>
-            I am an enthusiastic undergraduate student specializing in Electronics and Telecommunication Engineering at Smt. Kashibai Navale College of Engineering, affiliated with Savitribai Phule Pune University. With a strong foundation in Python and front-end engineering, I have honed my skills through various projects and internships. My hands-on experience includes a valuable internship as a Java developer, numerous web development projects, and intriguing ventures into data analysis. Passionate about leveraging technology to solve real-world problems, I am excited to bring my expertise and innovative mindset to new challenges and opportunities.
+            I am an enthusiastic graduate specializing in Electronics and Telecommunication Engineering at Smt. Kashibai Navale College of Engineering, affiliated with Savitribai Phule Pune University. With a strong foundation in Python and front-end engineering, I have honed my skills through various projects and internships. My hands-on experience includes a valuable internship as a Python developer, numerous web development projects, and intriguing ventures into data analysis. Passionate about leveraging technology to solve real-world problems, I am excited to bring my expertise and innovative mindset to new challenges and opportunities.
             </p>
           </div>
         </div>
