--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
           
           <div class="text-container">
             <p>
-            I am an enthusiastic graduate specializing in Electronics and Telecommunication Engineering at Smt. Kashibai Navale College of Engineering, affiliated with Savitribai Phule Pune University. With a strong foundation in Python and front-end engineering, I have honed my skills through various projects and internships. My hands-on experience includes a valuable internship as a Python developer, numerous web development projects, and intriguing ventures into data analysis. Passionate about leveraging technology to solve real-world problems, I am excited to bring my expertise and innovative mindset to new challenges and opportunities.
+            I am Yash Baviskar, an Electronics and Telecommunications engineer with a passion for programming and technology. With strong skills in Python, Java, and web development, I have successfully designed and deployed various applications, from image search engines to personal finance management tools. My projects reflect my focus on solving real-world problems through innovation, data analysis, and intuitive design.
+
+I thrive on learning new technologies and building user-friendly solutions, whether it's developing an interactive web platform, creating data-driven insights, or building AI-powered applications. My commitment to excellence is backed by hands-on experience in Python, HTML, CSS, JavaScript, and SQLite, with certifications from IBM, CISCO, and TCS to solidify my expertise.
+
+With a strong foundation in software development and a dedication to delivering impactful solutions, I aim to keep pushing boundaries and creating value in everything I do.
             </p>
           </div>
         </div>
