--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ With a strong foundation in software development and a dedication to delivering 
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:yashbavsikar.skncoe.entc@gmail.com">yashbaviskar.skncoe.entc@gmail.com</a></p>
+          <p><a href="mailto:yashbavsikar71@gmail.com">yashbaviskar71@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
